# AI-lens

./: .gitignore  README.md  SKILL.md  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
benchmarks/: run_benchmark.py
docs/: production.md
references/: supported-languages.md
scripts/: complexity.py  config.py  dead_code.py  impact.py  index_store.py  query.py  scan.py  semantic.py  symbol_graph.py  watch.py
scripts/parsers/: __init__.py  fallback.py  tree_sitter.py
tests/: conftest.py  test_index_and_semantic.py  test_scan_and_query.py
